--- a/documentation/docs/graphql/resolvers.mdx
+++ b/documentation/docs/graphql/resolvers.mdx
@@ -94,6 +94,7 @@ The `create`, `read`, `update`, and `delete` options above all accept the follow
     * `interceptors=[]` - An array of [interceptors](https://docs.nestjs.com/interceptors) to add to the endpoint.
     * `pipes=[]` - An array of [pipes](https://docs.nestjs.com/pipes) to add to the endpoint.
     * `filters=[]` - An array of [filters](https://docs.nestjs.com/exception-filters) to add to the endpoint.
+    * `decorators=[]` - An array of custom `PropertyDecorator` or `MethodDecorators` to add to the endpoint.
 
 
 ---
