--- a/documentation/docs/graphql/relations.mdx
+++ b/documentation/docs/graphql/relations.mdx
@@ -507,3 +507,35 @@ export class TodoItemResolver extends CRUDResolver(TodoItemDTO, {
 ```
 
 Now any requests that go to the `update` or `remove` endpoints will require the guard.
+
+## Relation Mixin
+
+If you are using the [resolvers individually](./resolvers#individual-resolvers) you can use the following mixins to add relations functionality.
+
+### Relatable
+
+When using The `Relatable` mixin adds all relations functionality to a resolver.
+
+In this example we expose on read endpoints for todo items with a readable subtasks realtion.
+
+```ts
+import { ReadResolver, Relatable } from '@nestjs-query/query-graphql';
+import { Resolver } from '@nestjs/graphql';
+import { AuthGuard } from '../auth.guard';
+import { SubTaskDTO } from '../sub-task/dto/sub-task.dto';
+import { TodoItemDTO } from './dto/todo-item.dto';
+import { TodoItemService } from './todo-item.service';
+
+const guards = [AuthGuard];
+
+@Resolver(() => TodoItemDTO)
+export class TodoItemResolver extends Relatable(TodoItemDTO, {
+  many: {
+    subTasks: { DTO: SubTaskDTO, disableRemove: true, disableUpdate: true },
+  },
+})(ReadResolver(TodoItemDTO)) {
+  constructor(readonly service: TodoItemService) {
+    super(service);
+  }
+}
+```
