--- a/documentation/docs/graphql/resolvers.mdx
+++ b/documentation/docs/graphql/resolvers.mdx
@@ -14,17 +14,20 @@ graphql schema.
 Resolvers work the same as they do in [`@nestjs/graphql`](https://docs.nestjs.com/graphql/resolvers-map) by annotating
 your class with `@Resolver`.
 
-For example you can create a resolver for the DTO defined above with the following:
+**NOTE** In this example the DTO and entity are the same shape, if you have a case where they are different or have computed fields check out [Assemblers](../concepts/assemblers) to understand how to convert to and from the DTO/Entity.
 
 ```ts
+import { QueryService } from '@nestjs-query/core';
 import { CRUDResolver } from '@nestjs-query/query-graphql';
 import { Resolver, Query, Args } from '@nestjs/graphql';
 import { TodoItemDTO } from './todo-item.dto';
-import { TodoItemService } from './todo-item.service';
+import { TodoItemEntity } from './todo-item.entity';
 
 @Resolver()
 export class TodoItemResolver extends CRUDResolver(TodoItemDTO) {
-  constructor(readonly service: TodoItemService) {
+  constructor(
+    @InjectTypeOrmQueryService(TodoItemEntity) readonly service: QueryService<TodoItemEntity>
+  ) {
     super(service);
   }
 }
@@ -137,18 +140,21 @@ export class TodoItemInputDTO {
 We can then update our resolver to
 
 ```ts
+import { QueryService } from '@nestjs-query/core';
 import { CRUDResolver } from '@nestjs-query/query-graphql';
 import { Resolver } from '@nestjs/graphql';
 import { TodoItemInputDTO } from './dto/create-todo-item.dto';
 import { TodoItemDTO } from './dto/todo-item.dto';
-import { TodoItemService } from './todo-item.service';
+import { TodoItemEntity } from './dto/todo-item.entity';
 
 @Resolver()
 export class TodoItemResolver extends CRUDResolver(TodoItemDTO, {
   CreateDTOClass: TodoItemInputDTO,
   UpdateDTOClass: TodoItemInputDTO,
 }) {
-  constructor(readonly service: TodoItemService) {
+  constructor(
+      @InjectTypeOrmQueryService(TodoItemEntity) readonly service: QueryService<TodoItemEntity>
+  ) {
     super(service);
   }
 }
@@ -165,16 +171,19 @@ Using the [options](#options) describe above we can disable different actions.
 In this example we disable all `create` endpoints
 
 ```ts
+import { QueryService } from '@nestjs-query/core';
 import { CRUDResolver } from '@nestjs-query/query-graphql';
 import { Resolver } from '@nestjs/graphql';
 import { TodoItemDTO } from './dto/todo-item.dto';
-import { TodoItemService } from './todo-item.service';
+import { TodoItemEntity } from './dto/todo-item.entity';
 
 @Resolver()
 export class TodoItemResolver extends CRUDResolver(TodoItemDTO, {
   create: { disabled: true },
 }) {
-  constructor(readonly service: TodoItemService) {
+  constructor(
+      @InjectTypeOrmQueryService(TodoItemEntity) readonly service: QueryService<TodoItemEntity>
+  ) {
     super(service);
   }
 }
@@ -188,10 +197,11 @@ In this example we disable all `many` mutations. This will prevent `createManyTo
 **NOTE** The same pattern applies for disabling the `one` endpoints.
 
 ```ts
+import { QueryService } from '@nestjs-query/core';
 import { CRUDResolver } from '@nestjs-query/query-graphql';
 import { Resolver } from '@nestjs/graphql';
 import { TodoItemDTO } from './dto/todo-item.dto';
-import { TodoItemService } from './todo-item.service';
+import { TodoItemEntity } from './dto/todo-item.entity';
 
 @Resolver()
 export class TodoItemResolver extends CRUDResolver(TodoItemDTO, {
@@ -199,7 +209,9 @@ export class TodoItemResolver extends CRUDResolver(TodoItemDTO, {
   update: { many: { disabled: true } },
   delete: { many: { disabled: true } },
 }) {
-  constructor(readonly service: TodoItemService) {
+  constructor(
+      @InjectTypeOrmQueryService(TodoItemEntity) readonly service: QueryService<TodoItemEntity>
+  ) {
     super(service);
   }
 }
@@ -246,11 +258,12 @@ export class AuthGuard implements CanActivate {
 We can then add it to each of our mutation endpoints
 
 ```ts
+import { QueryService } from '@nestjs-query/core';
 import { CRUDResolver } from '@nestjs-query/query-graphql';
 import { Resolver } from '@nestjs/graphql';
 import { AuthGuard } from '../auth.guard';
 import { TodoItemDTO } from './dto/todo-item.dto';
-import { TodoItemService } from './todo-item.service';
+import { TodoItemEntity } from './dto/todo-item.entity';
 
 const guards = [AuthGuard];
 
@@ -260,7 +273,9 @@ export class TodoItemResolver extends CRUDResolver(TodoItemDTO, {
   update: { guards },
   delete: { guards },
 }) {
-  constructor(readonly service: TodoItemService) {
+  constructor(
+      @InjectTypeOrmQueryService(TodoItemEntity) readonly service: QueryService<TodoItemEntity>
+  ) {
     super(service);
   }
 }
@@ -272,11 +287,12 @@ You can also apply to individual methods using the `one` and `many` fields. For 
 mutations.
 
 ```ts
+import { QueryService } from '@nestjs-query/core';
 import { CRUDResolver } from '@nestjs-query/query-graphql';
 import { Resolver } from '@nestjs/graphql';
 import { AuthGuard } from '../auth.guard';
 import { TodoItemDTO } from './dto/todo-item.dto';
-import { TodoItemService } from './todo-item.service';
+import { TodoItemEntity } from './dto/todo-item.entity';
 
 const guards = [AuthGuard];
 
@@ -286,7 +302,9 @@ export class TodoItemResolver extends CRUDResolver(TodoItemDTO, {
   update: { many: { guards } },
   delete: { many: { guards } },
 }) {
-  constructor(readonly service: TodoItemService) {
+  constructor(
+      @InjectTypeOrmQueryService(TodoItemEntity) readonly service: QueryService<TodoItemEntity>
+  ) {
     super(service);
   }
 }
@@ -300,16 +318,19 @@ When querying the default filter is empty. You can specify a default filter by u
 In this example we specify the default filter to be `completed IS TRUE`.
 
 ```ts
+import { QueryService } from '@nestjs-query/core';
 import { CRUDResolver } from '@nestjs-query/query-graphql';
 import { Resolver } from '@nestjs/graphql';
 import { TodoItemDTO } from './dto/todo-item.dto';
-import { TodoItemService } from './todo-item.service';
+import { TodoItemEntity } from './dto/todo-item.entity';
 
 @Resolver()
 export class TodoItemResolver extends CRUDResolver(TodoItemDTO, {
   read: { defaultFilter: { completed: { is: true } } },
 }) {
-  constructor(readonly service: TodoItemService) {
+  constructor(
+      @InjectTypeOrmQueryService(TodoItemEntity) readonly service: QueryService<TodoItemEntity>
+  ) {
     super(service);
   }
 }
@@ -328,16 +349,19 @@ To override the default you can override the following options:
 In this example we specify the `defaultResultSize` to 5 and `maxResultsSize` to 20.
 
 ```ts
+import { QueryService } from '@nestjs-query/core';
 import { CRUDResolver } from '@nestjs-query/query-graphql';
 import { Resolver } from '@nestjs/graphql';
 import { TodoItemDTO } from './dto/todo-item.dto';
-import { TodoItemService } from './todo-item.service';
+import { TodoItemEntity } from './dto/todo-item.entity';
 
 @Resolver()
 export class TodoItemResolver extends CRUDResolver(TodoItemDTO, {
   read: { defaultResultSize: 5, maxResultsSize: 20 },
 }) {
-  constructor(readonly service: TodoItemService) {
+  constructor(
+      @InjectTypeOrmQueryService(TodoItemEntity) readonly service: QueryService<TodoItemEntity>
+  ) {
     super(service);
   }
 }
@@ -351,16 +375,19 @@ When querying the default sort is based on the persistence layer. You can overri
 In this example we specify the default sort to be by `title`.
 
 ```ts
+import { QueryService } from '@nestjs-query/core';
 import { CRUDResolver } from '@nestjs-query/query-graphql';
 import { Resolver } from '@nestjs/graphql';
 import { TodoItemDTO } from './dto/todo-item.dto';
-import { TodoItemService } from './todo-item.service';
+import { TodoItemEntity } from './dto/todo-item.entity';
 
 @Resolver()
 export class TodoItemResolver extends CRUDResolver(TodoItemDTO, {
   read: { defaultSort: [{ field: 'title', direction: SortDirection.ASC }] },
 }) {
-  constructor(readonly service: TodoItemService) {
+  constructor(
+      @InjectTypeOrmQueryService(TodoItemEntity) readonly service: QueryService<TodoItemEntity>
+  ) {
     super(service);
   }
 }
@@ -385,14 +412,17 @@ The `CreateResolver` will only expose the `createOne` and `createMany` endpoints
 For example the following resolver will expose the `createOneTodoItem` and `createManyTodoItems` mutations.
 
 ```ts
+import { QueryService } from '@nestjs-query/core';
 import { CreateResolver } from '@nestjs-query/query-graphql';
 import { Resolver } from '@nestjs/graphql';
 import { TodoItemDTO } from './dto/todo-item.dto';
-import { TodoItemService } from './todo-item.service';
+import { TodoItemEntity } from './dto/todo-item.entity';
 
 @Resolver()
 export class TodoItemResolver extends CreateResolver(TodoItemDTO) {
-  constructor(readonly service: TodoItemService) {
+  constructor(
+      @InjectTypeOrmQueryService(TodoItemEntity) readonly service: QueryService<TodoItemEntity>
+  ) {
     super(service);
   }
 }
@@ -408,14 +438,17 @@ can be passed to the `ReadResolver`
 For example the following resolver will expose the `todoItems` and `todoItem` queries.
 
 ```ts
+import { QueryService } from '@nestjs-query/core';
 import { ReadResolver } from '@nestjs-query/query-graphql';
 import { Resolver } from '@nestjs/graphql';
 import { TodoItemDTO } from './dto/todo-item.dto';
-import { TodoItemService } from './todo-item.service';
+import { TodoItemEntity } from './dto/todo-item.entity';
 
 @Resolver()
 export class TodoItemResolver extends ReadResolver(TodoItemDTO) {
-  constructor(readonly service: TodoItemService) {
+  constructor(
+    @InjectTypeOrmQueryService(TodoItemEntity) readonly service: QueryService<TodoItemEntity>
+  ) {
     super(service);
   }
 }
@@ -430,15 +463,17 @@ The `UpdateResolver` will only expose the `updateOne` and `updateMany` endpoints
 For example the following resolver will expose the `updateOneTodoItem` and `updateManyTodoItems` mutations.
 
 ```ts
+import { QueryService } from '@nestjs-query/core';
 import { UpdateResolver } from '@nestjs-query/query-graphql';
 import { Resolver } from '@nestjs/graphql';
-
 import { TodoItemDTO } from './dto/todo-item.dto';
-import { TodoItemService } from './todo-item.service';
+import { TodoItemEntity } from './dto/todo-item.entity';
 
 @Resolver()
 export class TodoItemResolver extends UpdateResolver(TodoItemDTO) {
-  constructor(readonly service: TodoItemService) {
+  constructor(
+    @InjectTypeOrmQueryService(TodoItemEntity) readonly service: QueryService<TodoItemEntity>
+  ) {
     super(service);
   }
 }
@@ -453,14 +488,17 @@ The `DeleteResolver` will only expose the `deleteOne` and `deleteMany` endpoints
 For example the following resolver will expose the `updateOneTodoItem` and `updateManyTodoItems` mutations.
 
 ```
+import { QueryService } from '@nestjs-query/core';
 import { DeleteResolver } from '@nestjs-query/query-graphql';
 import { Resolver } from '@nestjs/graphql';
 import { TodoItemDTO } from './dto/todo-item.dto';
-import { TodoItemService } from './todo-item.service';
+import { TodoItemEntity } from './dto/todo-item.entity';
 
 @Resolver()
 export class TodoItemResolver extends DeleteResolver(TodoItemDTO) {
-  constructor(readonly service: TodoItemService) {
+  constructor(
+    @InjectTypeOrmQueryService(TodoItemEntity) readonly service: QueryService<TodoItemEntity>
+  ) {
     super(service);
   }
 }
